--- a/app/views/admin/reported_datas/index.html.erb
+++ b/app/views/admin/reported_datas/index.html.erb
@@ -1,15 +1,26 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Reported data</h1>
+<% if @report %>
+  <h3>For report: <%= link_to @report.title, [:admin, @report] %></h3>
+<% end %>
+<% if @report_area %>
+  <h3>For report area: <%= link_to @report_area.title, [:admin, @report_area.report] %></h3>
+<% end %>
+<% if @report || @report_area %>
+  <p>Showing the latest answer for each question.</p>
+<% end %>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Id</th>
+      <th>Report area</th>
+      <th>Question</th>
       <th>Answer</th>
       <th>Unit</th>
-      <th>Question</th>
-      <th>Report</th>
+      <% unless @report %>
+        <th>Report</th>
+      <% end %>
       <th>Created at</th>
       <th></th>
     </tr>
@@ -18,11 +29,13 @@
   <tbody>
     <% @reported_datas&.each do |data| %>
       <tr>
-        <td><%= data[:reported_data].id %></td>
+        <td><%= data[:report_area].title %></td>
+        <td><%= data[:reported_data].calculator_field.label %></td>
         <td><%= data[:reported_data].value %></td>
         <td><%= data[:reported_data].unit %></td>
-        <td><%= data[:reported_data].calculator_field.label %></td>
-        <td><%= link_to data[:report].title, [:admin, data[:report]] %></td>
+        <% unless @report %>
+          <td><%= link_to data[:report].title, admin_reported_datas_path(report_id: data[:report].id) %></td>
+        <% end %>
         <td><%= time_tag(data[:reported_data].created_at, format: '%F %R') %></td>
         <td class="admin-actions">
           <%= link_to 'Show', admin_reported_data_path(data[:reported_data]) %> &nbsp;
