--- a/app/views/admin/climate_reports/index.html.erb
+++ b/app/views/admin/climate_reports/index.html.erb
@@ -22,7 +22,10 @@
         <td><%= time_tag(report.updated_at, format: '%F %R') %></td>
         <td class="admin-actions">
           <%= link_to 'Show', [:admin, report] %> &nbsp;
-          <%= link_to 'Preview form', preview_admin_climate_report_path(report) %> &nbsp;
+          <%= link_to(
+            "Show reported data (#{ReportedData.all_latest_from_report(report).length}/#{report.number_of_questions})",
+            admin_reported_datas_path(report_id: report.id)
+          )%> &nbsp;
           <%= link_to 'Edit', edit_admin_climate_report_path(report) %> &nbsp;
           <%= link_to 'Destroy', [:admin, report], method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
