--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -103,6 +103,44 @@
   </div>
 </section>
 
+<% if experiment_active?(:partners) %>
+
+  <div class="bg-white">
+    <section class="section-padding">
+      <h2 class="heading-lg mb-6 text-center"><%=t 'views.welcome.index.partners' %></h2>
+      <div class="flex flex-col items-center t:flex-row t:flex-wrap">
+        <% [
+          {
+            alt: 'climate-neutral-now',
+            img_url: 'images/partners/climate-neutral-now.png',
+          },
+          {
+            alt: 'exponential-roadmap-initiative',
+            img_url: 'images/partners/exponential-roadmap-initiative.png',
+          },
+          {
+            alt: 'fossilfritt-sverige',
+            img_url: 'images/partners/fossilfritt-sverige.png',
+          },
+          {
+            alt: 'we-dont-have-time',
+            img_url: 'images/partners/we-dont-have-time.png',
+          },
+          {
+            alt: 'race-to-zero',
+            img_url: 'images/partners/race-to-zero.png',
+          }
+        ].each do |partner| %>
+          <div class="w-1/3 t:w-1/5 t:px-8 py-4">
+            <%= image_tag webpack_asset_path(partner[:img_url]), width: "300", alt: partner[:alt] %>
+          </div>
+        <% end %>
+      </div>
+    </section>
+  </div>
+
+<% end %>
+
 <section class="section-padding" data-controller="carousel">
   <h2 class="heading-lg text-center mb-12"><%= t 'views.welcome.index.community.heading' %></h2>
 
@@ -238,15 +276,19 @@
       </div>
     </div>
     <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/transparency.png'), 
-        srcset: { 
-            webpack_asset_path("images/illustrations/transparency-2x.png") => "2x", 
-            webpack_asset_path("images/illustrations/transparency-3x.png") => "3x" 
-        }, 
+      <%= image_tag webpack_asset_path('images/illustrations/transparency.png'),
+        srcset: {
+            webpack_asset_path("images/illustrations/transparency-2x.png") => "2x",
+            webpack_asset_path("images/illustrations/transparency-3x.png") => "3x"
+        },
         class: 'w-full max-w-md mx-auto', alt: '' %>
     </div>
   </div>
 </section>
+
+
+
+
 
 <section class="section-padding">
   <h2 class="heading-lg text-center mb-12">
@@ -295,10 +337,10 @@
         <div class="w-full m-lg:w-3/4 t:w-1/3">
           <div class="h-full overflow-hidden bg-green-tint-1 rounded-lg shadow-lg">
             <div class="pb-1/2 relative">
-              <%= image_tag webpack_asset_path(item[:image_url]), 
-                srcset: { 
+              <%= image_tag webpack_asset_path(item[:image_url]),
+                srcset: {
                     webpack_asset_path(item[:image_url_2x]) => "2x"
-                }, 
+                },
                 class: 'absolute top-0 w-full h-full object-cover', alt: '' %>
             </div>
             <div class="p-4 relative">
