--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <%= render "shared/prefooter" %>
   <% end %>
 
-  <section class="bg-primary text-white text-sm p-4 py-6 t:px-8 t:py-12 space-y-4">
+  <section class="bg-primary text-white text-sm p-4 pt-6 pb-36 t:px-8 t:pt-12 t:pb-20 space-y-4">
     <div class="flex flex-row flex-wrap -m-4">
       <div class="w-full d:w-2/5 flex-grow p-4 space-y-4">
         <div>
@@ -91,7 +91,7 @@
     </div>
 
     
-    <div class="text-right space-y-2">
+    <div class="text-center space-y-2">
       <div>
         <div class="dropdown">
           <input type="checkbox" id="region-picker" class="dropdown-toggler">
