--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -85,6 +85,7 @@
           <li><%= link_to t('about_us'), about_path, class: 'link-ui' %> </li>
           <li><%= link_to t('100_percent_transparency'), transparency_path, class: 'link-ui' %> </li>
           <li><%= link_to t('views.shared.footer.jobs'), 'https://jobs.goclimate.com/', class: 'link-ui' %></li>
+          <li><%= link_to 'Cookies', cookies_path, class: 'link-ui' %></li>
           <li><%= link_to t('contact_us'), contact_path, class: 'link-ui' %></li>
         </ul>
       </div>
