--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -10,6 +10,12 @@
 </nav>
 
 <%= react_component 'Test', blabla: 'hej' %>
+<%= react_component 'Button', children: 'I am button', href: '/dashboard', className: 'button-cta' %>
+<%= react_component 'Input', placeholder: 'placeholder' %>
+<input type="text" class="input">
+<button data-controller="button" data-status="loading">
+  <span data-target="button.content">Hello</span>
+</button>
 
 <section class="z-0 bg-blue-tint-1">
   <div class="relative z-20 max-w-3xl mx-auto px-4 t:px-16 d:px-0 pt-16 t:pt-24 d:pt-32 text-center">
