Add Climate Tips and Take Action pages

--- a/app/views/admin/climate_report_invoices/show.html.erb
+++ b/app/views/admin/climate_report_invoices/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= render 'admin/shared/notice_banner' %>
 
 <% if @previous.present? %>
   <%= link_to '← Previous', admin_climate_report_invoice_path(@previous), class: 'btn btn-default' %>
