Add link to signing petitions on Climate tips and Take action pages

--- a/app/views/climate_tips/show.html.erb
+++ b/app/views/climate_tips/show.html.erb
@@ -109,6 +109,12 @@
           image_url: 'images/climate_tips/system_civil-1x.jpg',
           image_url_2x: 'images/climate_tips/system_civil-2x.jpg'
         },
+        {
+          heading: t('views.climate_tips.categories.system_change.item_3.heading'),
+          url: t('views.climate_tips.categories.system_change.item_3.link'),
+          image_url: 'images/climate_tips/system_petition-1x.jpg',
+          image_url_2x: 'images/climate_tips/system_petition-2x.jpg'
+        },
       ]
     },
     {
