--- a/app/views/take_action/show.html.erb
+++ b/app/views/take_action/show.html.erb
@@ -165,6 +165,7 @@
     <div class="t:w-1/2 d:w-2/3 space-y-6">
       <h2 class="heading-lg"><%= t('views.take_action.categories.petitions.heading') %></h2>
       <p><%= t('views.take_action.categories.petitions.text') %></p>
+      <%= link_to(t('views.take_action.categories.petitions.cta'), 'https://www.goclimate.com/blog/petitions/', class: 'button button-cta') %>
     </div>
     <div class="t:w-2/5 d-lg:w-1/3">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
