--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -3,14 +3,17 @@
     <span class="fas fa-exclamation-triangle text-orange-accent fa-lg"></span>
     <div class="flex-grow text-orange-dark">
       <p class="text-large font-bold">
-        <%= I18n.t("errors.messages.not_saved",
-                   count: resource.errors.count,
-                   resource: resource.class.model_name.human.downcase)
-         %>
+        <%= I18n.t("errors.messages.something_wrong") %>
       </p>
       <ul class="list-bullet">
         <% resource.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li>
+            <% if message.include?('Reset password token') %>
+              <%= I18n.t("errors.messages.reset_password_token_expired_html").gsub("<a href=''", "<a href='#{new_user_password_path}' class='link'").html_safe %>
+            <% else %>
+              <%= message %>
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
