--- a/app/assets/main/index.css
+++ b/app/assets/main/index.css
@@ -4,6 +4,7 @@
 
 @import 'components/button.css';
 @import 'components/callout.css';
+@import 'components/checkbox.css';
 @import 'components/collapse.css';
 @import 'components/credit-card.css';
 @import 'components/divider.css';
