--- a/app/views/admin/business_calculators/_field_layout.html.erb
+++ b/app/views/admin/business_calculators/_field_layout.html.erb
@@ -26,7 +26,7 @@
   <div class="col-sm-2">
     <div>
       <%= local_assigns[:fields].label :question_type, class: local_assigns[:label_class] %>
-      <%= local_assigns[:fields].select :field_type, options_for_select([['Open ended', 'open_ended'], ['Choose one alternative', 'radio']], local_assigns[:fields].object&.field_type), {}, class: "form-control #{local_assigns[:input_class]}", 'data-target': 'units-and-question-types.fieldType', 'data-action': 'units-and-question-types#toggle' %>
+      <%= local_assigns[:fields].select :field_type, options_for_select([['Open ended', 'open_ended'], ['Choose one alternative', 'radio'], ['Choose multiple alternatives', 'checkbox']], local_assigns[:fields].object&.field_type), {}, class: "form-control #{local_assigns[:input_class]}", 'data-target': 'units-and-question-types.fieldType', 'data-action': 'units-and-question-types#toggle' %>
     </div>
     <div style="margin-top: 1em;">
       <label>
