Make it visually more clear which business calculators that are archived

--- a/app/views/admin/business_calculators/index.html.erb
+++ b/app/views/admin/business_calculators/index.html.erb
@@ -14,7 +14,7 @@
 
   <tbody>
     <% @calculators.each do |calculator| %>
-      <tr>
+      <tr style="<%= calculator.archived? ? 'background: #f5f5f5;' : '' %>">
         <td><%= calculator.name %></td>
         <td><%= calculator.status %></td>
         <td><%= time_tag(calculator.updated_at, format: '%F %R') %></td>
