Add admin views and actions for users resources

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -62,6 +62,9 @@
                 <li<% if controller_name == 'climate_reports' %> class="active"<% end %>>
                   <%= link_to 'Climate Reports', admin_climate_reports_path %></a>
                 </li>
+                <li class="<%= 'active' if controller_name == 'users'%>">
+                  <%= link_to 'Users', admin_users_path %></a>
+                </li>
               </ul>
             </div>
           </div>
